force-app/main/default/objects/Opportunity/fields/Backfill_for_Type__c.field-meta.xml
<CustomField>
    <fullName>Backfill_for_Type__c</fullName>
    <description>Field used to backfill the Type field on Opps</description>
    <formula>IF( 
    AND(
        NOT(ISBLANK(Account.ChargeOver_Initial_Payment_Date__c)),
        CloseDate &lt;= DATEVALUE(Account.ChargeOver_Initial_Payment_Date__c)
    ) 
, &apos;New Business&apos;, &apos;Existing Business&apos;)</formula>
    <label>Backfill for Type</label>
    <type>Text</type>
</CustomField>