force-app/main/default/objects/Opportunity/fields/Behalf_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Behalf_Order_No__c</fullName>
    <label>Behalf Order No.</label>
    <length>16</length>
    <type>Text</type>
</CustomField>