force-app/main/default/objects/Opportunity/fields/Bill62__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Payment_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Method</label>
    <referenceTo>Bill62__Payment_Method__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>