force-app/main/default/objects/Opportunity/fields/Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Status__c</fullName>
    <label>Billing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Billed</fullName>
                <default>true</default>
                <label>Not Billed</label>
            </value>
            <value>
                <fullName>CC Paid</fullName>
            </value>
            <value>
                <fullName>Partial CC</fullName>
            </value>
            <value>
                <fullName>CC Rejected</fullName>
            </value>
            <value>
                <fullName>CC Refunded</fullName>
            </value>
            <value>
                <fullName>CC Lost</fullName>
            </value>
            <value>
                <fullName>Waiting on Behalf / Affirm</fullName>
            </value>
            <value>
                <fullName>Waiting on Check</fullName>
            </value>
            <value>
                <fullName>Behalf Paid - Need Monthly CC</fullName>
            </value>
            <value>
                <fullName>Behalf Refunded</fullName>
            </value>
            <value>
                <fullName>Behalf - Lost</fullName>
            </value>
            <value>
                <fullName>No Initial Billing</fullName>
            </value>
            <value>
                <fullName>Existing Client Upsell</fullName>
            </value>
            <value>
                <fullName>Corp Offer - In Progress</fullName>
            </value>
            <value>
                <fullName>Corp Offer - Do Not Contact</fullName>
            </value>
            <value>
                <fullName>CC Paid - Corp Offer / Dissolution</fullName>
            </value>
            <value>
                <fullName>Behalf Paid - Corp Offer/Dissolution</fullName>
            </value>
            <value>
                <fullName>CC Paid- Corp Upsell</fullName>
            </value>
            <value>
                <fullName>CC Paid - A LA Carte</fullName>
            </value>
            <value>
                <fullName>Behalf Paid - A La Carte</fullName>
            </value>
            <value>
                <fullName>CC Paid - Subscription</fullName>
            </value>
            <value>
                <fullName>Behalf Paid - Subscription</fullName>
            </value>
            <value>
                <fullName>Behalf Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>