force-app/main/default/objects/Opportunity/fields/Business_Tax_Prep__c.field-meta.xml
<CustomField>
    <fullName>Business_Tax_Prep__c</fullName>
    <formula>Account.Business_Tax_Prep__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Tax Prep</label>
    <type>Checkbox</type>
</CustomField>