force-app/main/default/objects/Opportunity/fields/ChargeOver_Quote_URL__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_Quote_URL__c</fullName>
    <label>ChargeOver Quote URL</label>
    <type>Url</type>
</CustomField>