force-app/main/default/objects/Opportunity/fields/ChargeOver_Quote_URL_Sales__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_Quote_URL_Sales__c</fullName>
    <description>The ChargeOver Quote URL that contains a URL for pricing calculator attribution</description>
    <label>ChargeOver Quote URL (Sales)</label>
    <type>Url</type>
</CustomField>