force-app/main/default/objects/Opportunity/fields/Close_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Time__c</fullName>
    <description>The specific date and time that an opportunity gets marked as Closed Won or Closed Lost</description>
    <label>Close Date/Time</label>
    <type>DateTime</type>
</CustomField>