force-app/main/default/objects/Opportunity/fields/Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason__c</fullName>
    <description>This field should be updated when an Opportunity&apos;s Stage is changed to Closed Lost</description>
    <inlineHelpText>Please select a value for Closed-Lost Reason in order to save Stage to Closed Lost.</inlineHelpText>
    <label>Closed Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bad Reviews</fullName>
            </value>
            <value>
                <fullName>Going Local</fullName>
            </value>
            <value>
                <fullName>Has Accountant</fullName>
            </value>
            <value>
                <fullName>No Business</fullName>
            </value>
            <value>
                <fullName>No Money</fullName>
            </value>
            <value>
                <fullName>Opportunity Expired</fullName>
            </value>
            <value>
                <fullName>Other Quote Accepted</fullName>
            </value>
            <value>
                <fullName>TSA Consulted Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>