force-app/main/default/objects/Opportunity/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <description>Primary Contact Phone</description>
    <formula>Account.Primary_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Primary Contact Phone</inlineHelpText>
    <label>Contact Phone</label>
    <type>Text</type>
</CustomField>