force-app/main/default/objects/Opportunity/fields/Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time__c</fullName>
    <description>Created Date and Time of the opportunity for reporting purposes.</description>
    <label>Created Date/Time</label>
    <type>DateTime</type>
</CustomField>