force-app/main/default/objects/Opportunity/fields/Customized_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Customized_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customized Bundle</label>
    <type>Checkbox</type>
</CustomField>