force-app/main/default/objects/Opportunity/fields/D1049S__c.field-meta.xml
<CustomField>
    <fullName>D1049S__c</fullName>
    <defaultValue>false</defaultValue>
    <label>D1049S</label>
    <type>Checkbox</type>
</CustomField>