force-app/main/default/objects/Opportunity/fields/D749S__c.field-meta.xml
<CustomField>
    <fullName>D749S__c</fullName>
    <defaultValue>false</defaultValue>
    <label>D749S</label>
    <type>Checkbox</type>
</CustomField>