force-app/main/default/objects/Opportunity/fields/D899S__c.field-meta.xml
<CustomField>
    <fullName>D899S__c</fullName>
    <defaultValue>false</defaultValue>
    <label>D899S</label>
    <type>Checkbox</type>
</CustomField>