force-app/main/default/objects/Opportunity/fields/First_Charge_Total__c.field-meta.xml
<CustomField>
    <fullName>First_Charge_Total__c</fullName>
    <label>First Charge Total</label>
    <summarizedField>OpportunityLineItem.First_Charge_Total__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>