force-app/main/default/objects/Opportunity/fields/LegalZoom_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>LegalZoom_Checkbox__c</fullName>
    <formula>Account.LegalZoom__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LegalZoom Checkbox</label>
    <type>Checkbox</type>
</CustomField>