force-app/main/default/objects/Opportunity/fields/LZ_BIT_SO__c.field-meta.xml
<CustomField>
    <fullName>LZ_BIT_SO__c</fullName>
    <formula>Account.LZ_BIT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>BTP client</inlineHelpText>
    <label>LZ BIT SO</label>
    <type>Checkbox</type>
</CustomField>