force-app/main/default/objects/Opportunity/fields/Marketing_Link__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://1800accountant.secure.force.com/PostTSA1/?o=&quot;+Id, &quot;Marketing Page Link&quot;,
&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Link</label>
    <type>Text</type>
</CustomField>