force-app/main/default/objects/Opportunity/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Merchant</label>
    <type>Checkbox</type>
</CustomField>