force-app/main/default/objects/Opportunity/fields/MSCLKID__c.field-meta.xml
<CustomField>
    <fullName>MSCLKID__c</fullName>
    <description>The MSCLKID from the Account at the time the Opportunity was created</description>
    <label>MSCLKID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>