force-app/main/default/objects/Opportunity/fields/Net_Collected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Net_Collected_Revenue__c</fullName>
    <description>The total amount of collected revenue for this opportunity minus any refunds</description>
    <label>Net Collected Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>