force-app/main/default/objects/Opportunity/fields/Next_Contact_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Contact_Time__c</fullName>
    <label>Next Contact Time</label>
    <type>DateTime</type>
</CustomField>