force-app/main/default/objects/Opportunity/fields/Override_1049__c.field-meta.xml
<CustomField>
    <fullName>Override_1049__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override 1049</label>
    <type>Checkbox</type>
</CustomField>