force-app/main/default/objects/Opportunity/fields/Override_749__c.field-meta.xml
<CustomField>
    <fullName>Override_749__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override 749</label>
    <type>Checkbox</type>
</CustomField>