force-app/main/default/objects/Opportunity/fields/Override_899__c.field-meta.xml
<CustomField>
    <fullName>Override_899__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override 899</label>
    <type>Checkbox</type>
</CustomField>