force-app/main/default/objects/Opportunity/fields/Override_BIT__c.field-meta.xml
<CustomField>
    <fullName>Override_BIT__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Override for BTP clients</inlineHelpText>
    <label>Override BTP</label>
    <type>Checkbox</type>
</CustomField>