force-app/main/default/objects/Opportunity/fields/Override_Discovery_Call_limit__c.field-meta.xml
<CustomField>
    <fullName>Override_Discovery_Call_limit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override - Discovery Call limit</label>
    <type>Checkbox</type>
</CustomField>