force-app/main/default/objects/Opportunity/fields/Override_Finance_Packages__c.field-meta.xml
<CustomField>
    <fullName>Override_Finance_Packages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override - Finance Packages</label>
    <type>Checkbox</type>
</CustomField>