force-app/main/default/objects/Opportunity/fields/Override_LegalZoom__c.field-meta.xml
<CustomField>
    <fullName>Override_LegalZoom__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Override for Corp products</description>
    <inlineHelpText>Override for Corp products</inlineHelpText>
    <label>Override LegalZoom</label>
    <type>Checkbox</type>
</CustomField>