force-app/main/default/objects/Opportunity/fields/Override_RCF__c.field-meta.xml
<CustomField>
    <fullName>Override_RCF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Override for Revenue clearance filing</inlineHelpText>
    <label>Override RCF</label>
    <type>Checkbox</type>
</CustomField>