force-app/main/default/objects/Opportunity/fields/Override_Sch_C__c.field-meta.xml
<CustomField>
    <fullName>Override_Sch_C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Sch C</label>
    <type>Checkbox</type>
</CustomField>