force-app/main/default/objects/Opportunity/fields/Owner_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Owner_Hire_Date__c</fullName>
    <formula>Owner.Hire_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Hire Date</label>
    <type>Date</type>
</CustomField>