force-app/main/default/objects/Opportunity/fields/Paid_Time__c.field-meta.xml
<CustomField>
    <fullName>Paid_Time__c</fullName>
    <label>Paid Time</label>
    <type>DateTime</type>
</CustomField>