force-app/main/default/objects/Opportunity/fields/Payment_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Processing_Status__c</fullName>
    <label>Payment Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>