force-app/main/default/objects/Opportunity/fields/Paypal_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Paypal_Transaction_ID__c</fullName>
    <label>Paypal Transaction ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>