force-app/main/default/objects/Opportunity/fields/Post_TSA_Link__c.field-meta.xml
<CustomField>
    <fullName>Post_TSA_Link__c</fullName>
    <label>Post TSA Link</label>
    <type>Url</type>
</CustomField>