force-app/main/default/objects/Opportunity/fields/Primary_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_ID__c</fullName>
    <formula>Account.Primary_Contact_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact ID</label>
    <type>Text</type>
</CustomField>