force-app/main/default/objects/Opportunity/fields/RCF_S__c.field-meta.xml
<CustomField>
    <fullName>RCF_S__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RCF - S</label>
    <type>Checkbox</type>
</CustomField>