force-app/main/default/objects/Opportunity/fields/Sale_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Sale_Completed_By__c</fullName>
    <label>Sale Completed By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>