force-app/main/default/objects/Opportunity/fields/ShareASale_Status__c.field-meta.xml
<CustomField>
    <fullName>ShareASale_Status__c</fullName>
    <label>ShareASale Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>