force-app/main/default/objects/Opportunity/fields/Upsell_Status__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Status__c</fullName>
    <label>Upsell Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Billing_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Not Billed</fullName>
            </value>
            <value>
                <fullName>CC Paid</fullName>
            </value>
            <value>
                <fullName>Partial CC</fullName>
            </value>
            <value>
                <fullName>CC Rejected</fullName>
            </value>
            <value>
                <fullName>CC Refunded</fullName>
            </value>
            <value>
                <fullName>Waiting on Behalf</fullName>
            </value>
            <value>
                <fullName>Waiting on Check</fullName>
            </value>
            <value>
                <fullName>Behalf Paid - Need Monthly CC</fullName>
            </value>
            <value>
                <fullName>Behalf Paid</fullName>
            </value>
            <value>
                <fullName>Behalf Refunded</fullName>
            </value>
            <value>
                <fullName>Behalf Rejected</fullName>
            </value>
            <value>
                <fullName>No Initial Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>