force-app/main/default/objects/Opportunity/fields/X695_Package__c.field-meta.xml
<CustomField>
    <fullName>X695_Package__c</fullName>
    <defaultValue>false</defaultValue>
    <label>695 Package</label>
    <type>Checkbox</type>
</CustomField>