force-app/main/default/objects/Opportunity/fields/zqu__ZuoraConfig__c.field-meta.xml
<CustomField>
    <fullName>zqu__ZuoraConfig__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zuora Config</label>
    <referenceTo>zqu__ZuoraConfig__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>