force-app/main/default/objects/Opportunity/recordTypes/Default_Opportunity_Corp.recordType-meta.xml
<RecordType>
    <fullName>Default_Opportunity_Corp</fullName>
    <active>false</active>
    <businessProcess>Default</businessProcess>
    <label>Default Opportunity- Corp</label>
</RecordType>