force-app/main/default/objects/Opportunity/recordTypes/Default_Oppurtunity.recordType-meta.xml
<RecordType>
    <fullName>Default_Oppurtunity</fullName>
    <active>true</active>
    <businessProcess>2020 Sales</businessProcess>
    <label>Default Oppurtunity</label>
</RecordType>