force-app/main/default/objects/Opportunity/recordTypes/no_CC.recordType-meta.xml
<RecordType>
    <fullName>no_CC</fullName>
    <active>false</active>
    <businessProcess>Default</businessProcess>
    <label>no CC</label>
</RecordType>