force-app/main/default/objects/Opportunity/validationRules/BIT_Customers.validationRule-meta.xml
<ValidationRule>
    <fullName>BIT_Customers</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
     LZ_BIT_SO__c  = TRUE,
    Account.Product__r.Name  &lt;&gt; &quot;Business Tax Preparation&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Basic (Finance)&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Basic (Full)&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Basic (Half)&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Basic (Q)&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Basic + Est. Tax&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Basic + Est. Tax (Finance)&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Basic + Est. Tax (Half)&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Basic + Est. Tax (Q)&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Pro&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Pro (Finance)&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Pro (Half)&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Pro (Q)&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Pro + Est. Tax&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Pro + Est. Tax (Finance)&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Pro + Est. Tax (Half)&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Pro + Est. Tax (Q)&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Annual Business &amp; Personal Tax Prep 2015&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Annual Business Tax Prep 2015&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Form 1023 for Nonprofit&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Neat Receipts: Business Tax Prep - Free 2014 for New Business&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Nonprofit Tax Prep and Tax Consulting&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Business Tax Prep, Tax Consulting&quot;,
Account.Product__r.Name   =  &quot;Additional Partner Tax Prep&quot;,
Account.Product__r.Name  = &quot;Additional Personal Return&quot;,
Account.Product__r.Name  = &quot;Annual Personal Tax Prep 2015&quot;,
Account.Product__r.Name  = &quot;Audit Protection&quot;,
Account.Product__r.Name  = &quot;Audit Protection (Monthly)&quot;,
Account.Product__r.Name  = &quot;Audit Protection - Business &amp; Personal&quot;,
Account.Product__r.Name  = &quot;Audit Protection - Business &amp; Personal (Monthly)&quot;,
Account.Product__r.Name  =&quot;Audit Support&quot;,
Account.Product__r.Name  =&quot;Client Books&quot;,
Account.Product__r.Name  =&quot;Deluxe Recordkeeping Package&quot;,
Account.Product__r.Name  =&quot;Expedite Tax Prep Fee&quot;,
Account.Product__r.Name  =&quot;Full-Service Bookkeeping – Monthly ($10k-100 trans)&quot;,
Account.Product__r.Name  =&quot;Full-Service Bookkeeping – Monthly ($15k-150 trans)&quot;,
Account.Product__r.Name  =&quot;Full-Service Bookkeeping – Monthly ($5k-50 trans)&quot;,
Account.Product__r.Name  = &quot;Installment Agreement &amp; Tax Consulting&quot;,
Account.Product__r.Name  = &quot;Loan Agreement&quot;,
Account.Product__r.Name  = &quot;Neat Receipts: Tax Consulting - 30 Day Trial&quot;,
Account.Product__r.Name  = &quot;Nonprofit Tax Prep and Tax Consulting&quot;,
Account.Product__r.Name  = &quot;Payroll - 1 Employee&quot;,
Account.Product__r.Name  = &quot;Payroll - 3 Employees&quot;,
Account.Product__r.Name  = &quot;Payroll - 5 Employees&quot;,
Account.Product__r.Name  = &quot;Payroll - 6 Employees&quot;,
Account.Product__r.Name  = &quot;Payroll - 7 Employees&quot;,
Account.Product__r.Name  = &quot;Personal Tax Extension&quot;,
Account.Product__r.Name  = &quot;Quarterly Estimated Taxes&quot;,
Account.Product__r.Name  = &quot;Sales &amp; Use Tax&quot;
)</errorConditionFormula>
    <errorMessage>BIT Customer - Can&apos;t choose this product</errorMessage>
</ValidationRule>