force-app/main/default/objects/Opportunity/validationRules/BIT_Customers123.validationRule-meta.xml
<ValidationRule>
    <fullName>BIT_Customers123</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
     LZ_BIT_SO__c  = TRUE,
    Account.Product__r.Name  &lt;&gt; &quot;Business Tax Preparation&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Basic (Finance)&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Basic (Full)&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Basic (Half)&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Basic (Q)&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Basic + Est. Tax&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Basic + Est. Tax (Finance)&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Basic + Est. Tax (Half)&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Basic + Est. Tax (Q)&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Pro&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Pro (Finance)&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Pro (Half)&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Pro (Q)&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Pro + Est. Tax&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Pro + Est. Tax (Finance)&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Pro + Est. Tax (Half)&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Pro + Est. Tax (Q)&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Annual Business &amp; Personal Tax Prep 2015&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Annual Business Tax Prep 2015&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Form 1023 for Nonprofit&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Neat Receipts: Business Tax Prep - Free 2014 for New Business&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Nonprofit Tax Prep and Tax Consulting&quot;,
Account.Product__r.Name  &lt;&gt; &quot;Business Tax Prep, Tax Consulting&quot;
)</errorConditionFormula>
    <errorMessage>2 BIT Customer - Can&apos;t choose this product</errorMessage>
</ValidationRule>