force-app/main/default/objects/Opportunity/validationRules/Cant_update_CC_Paid.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_update_CC_Paid</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
(ISPICKVAL( Billing_Status__c , &apos;CC Paid&apos;)), 
$Profile.Name == &apos;InsideSalesUser&apos; 
)</errorConditionFormula>
    <errorMessage>Can&apos;t change status once the payment has processed.</errorMessage>
</ValidationRule>