force-app/main/default/objects/Opportunity/validationRules/CC_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>CC_blank</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
 Credit_Card_Number__c  = &quot;&quot;,
 TEXT (Billing_Status__c  )= &quot;Behalf Paid&quot; 
)</errorConditionFormula>
    <errorMessage>Update CC info to change Billing Status to Behalf Paid.</errorMessage>
</ValidationRule>