force-app/main/default/objects/Opportunity/validationRules/CC_Data_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CC_Data_Required</fullName>
    <active>false</active>
    <errorConditionFormula>IF( 
   ( 
    AND( 
      ISPICKVAL(StageName, &quot;Closed Won&quot;),
      ISPICKVAL(Payment_Method__c, &quot;Credit Card&quot;),
      OR (
        ISBLANK(Credit_Card_Number__c),
        ISBLANK(CVV__c),
        ISBLANK(Expiration_Date__c)
       )
      
    )
    ), 
    true, false
)</errorConditionFormula>
    <errorMessage>All credit card fields must be filled out</errorMessage>
</ValidationRule>