force-app/main/default/objects/Opportunity/validationRules/Closed_Lost_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Lost_Reason</fullName>
    <active>true</active>
    <description>Requires Closed Lost Reason to have a selected value if the Opportunity Stage is being updated to Closed Lost.</description>
    <errorConditionFormula>AND(ISPickval( StageName ,&apos;Closed Lost&apos;),Ispickval( Closed_Lost_Reason__c ,&apos;&apos;))</errorConditionFormula>
    <errorDisplayField>Closed_Lost_Reason__c</errorDisplayField>
    <errorMessage>You must select a value for Closed-Lost Reason to save this update.</errorMessage>
</ValidationRule>