force-app/main/default/objects/Opportunity/validationRules/Limit_Equip.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_Equip</fullName>
    <active>false</active>
    <description>Only Equip representatives can create opportunities for Equip clients. Currently, only Floria Royals and Nathan Maggio.</description>
    <errorConditionFormula>AND(
     Account.Equip_Client__c ,
    $User.Id &lt;&gt; &quot;005j000000DRo0G&quot;,
    $User.Id &lt;&gt; &quot;005j000000BNyXe&quot;
)</errorConditionFormula>
    <errorMessage>Only Equip representatives can create opportunities for Equip clients.</errorMessage>
</ValidationRule>