force-app/main/default/objects/Opportunity/validationRules/NoChangingOwnership.validationRule-meta.xml
<ValidationRule>
    <fullName>NoChangingOwnership</fullName>
    <active>false</active>
    <description>Cant change owners.</description>
    <errorConditionFormula>AND(
ISCHANGED(OwnerId),
PRIORVALUE(OwnerId)=&apos;005j000000BODKS&apos;,
$Profile.Name=&apos;InsideSalesUser-Zuora&apos;,
$User.Id&lt;&gt;&apos;005j000000BEcmo&apos;,
$User.Id&lt;&gt;&apos;005j000000DDGn1&apos;,
$User.Id&lt;&gt;&apos;005j000000C5aOO&apos;
)</errorConditionFormula>
    <errorMessage>Only Admins can change the Oppty Owner</errorMessage>
</ValidationRule>